# pygeosolve

./: .buildinfo  .gitignore  README.md  api.html  constraints.py  genindex.html  geometry.py  index.html  installation.html  objects.inv  plot.py  problem.py  py-modindex.html  pyproject.toml  quick-start.html  search.html  searchindex.js  setup.cfg  test.py
.github/workflows/: docs.yml  test.yml
doc/source/: conf.py  index.rst
doc/source/constraints/: index.rst
doc/source/parameters/: index.rst
doc/source/problem/: index.rst
docs/: Makefile
docs/source/: api.rst  index.rst  installation.rst  quick-start.rst
docs/source/constraints/: index.rst
docs/source/geometry/: index.rst
docs/source/plot/: index.rst
examples/: polygon.py  right_angle.py  triangle.py
pygeosolve/: __init__.py  constraints.py  geometry.py  parameters.py  plot.py  problem.py  test.py  tools.py  util.py
source/: conf.py
tests/: __init__.py  conftest.py  object_factory.py  test_constraints.py  test_geometry.py  test_point.py  test_solve.py  test_square.py  test_triangle.py
