[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pygeosolve/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.doc8]
# Documentation line length consistent with Black, and roughly maximum to avoid
# horizontal scrollbars appearing in code/preformatted blocks.
max-line-length = 88
