[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pygeosolve/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.doc8]
# Documentation line length consistent with Black, and roughly maximum to avoid
# horizontal scrollbars appearing in code/preformatted blocks.
max-line-length = 88
