[metadata]
name = pygeosolve
author = Sean Leavey
author_email = pygeosolve@attackllama.com
description = Geometric constraint solver
license = GPL-3.0-or-later
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SeanDS/pygeosolve
project_urls =
    Bug Tracker = https://github.com/SeanDS/pygeosolve/issues
    Source Code = https://github.com/SeanDS/pygeosolve/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering

[options]
packages =
    pygeosolve
python_requires = >=3.8
install_requires =
    numpy >= 1.15
    scipy >= 1.4
    matplotlib >= 3.3.0

[options.extras_require]
dev =
    # Docs.
    sphinx
    numpydoc
    # Source code tools.
    black
    # Testing.
    pytest

[flake8]
# Ignored rules.
ignore =
    # Errors.
    E203  # whitespace before ':'
    E266  # too many leading '#' for block comment
    E501  # line too long (handled by black instead).
    E731  # do not assign a lambda expression, use a def
    # Warnings.
    W503  # line break before binary operator

# Excluded directories.
exclude =
    .git
    __pycache__
    docs
    build
    dist
